@@ -15,6 +15,7 @@ Master
 - in mode "--nye", if user does not provide an output file name then a default one in CFG format is created. This mode also always output the G tensor in CFG format.
 - in mode "--polycrystal", fixed a bug where rotations provided were performed using Z, Y, X permutation instead of X, Y, Z. Thanks to Marcin Minkowsky, Tampere University, Finland, for pointing out this bug.
 - in mode "--rdf", improved efficiency in the computation of the partial RDFs. Also fixed a bug in the computation of the total RDF when atoms of different species and different densities were present.
+- in mode "--unfold", when reading VASP OUTCAR files produced with IBRION<0, added an error message.
 - in option "-bind-shells", when no shells are defined, atoms close to one another are considered as associated core/shell pairs.
 - option "-reduce-cell" now checks that stoichiometry is preserved.
 - random number generator will now use file "/dev/urandom" to generate a random seed whenever possible (only in UNIX/Linux systems); otherwise, system clock will be used as a seed.
@@ -25,10 +26,10 @@ Master
 - fixed a bug in option "-cell" where option was skipped when requiring zero length for xy, yz, or xz component.
 - fixed a bug in option "-dislocation", where the stress components for a screw dislocation were inverted.
 - fixed a bug in option "-orthogonal-cell" where the new number of atoms was not always correctly estimated, leading to a segmentation fault.
+- fixed a bug in option "-velocity" where velocities were not correctly converted to A/ps.
 - fixed a bug when detecting if coordinates are Cartesian or reduced.
 - fixed a bug where the position was not always computed correctly when using an operation with "box", e.g. when introducing dislocations. Thanks to Samaneh Nasiri, Friedrich-Alexander-University Erlangen-Nürnberg, Germany, for pointing out this bug.
 - fixed a bug in EXPREVAL where expressions containing a factorial preceded by a parenthesis would cause a segmentation fault. Also fixed a bug in computing ATAN2.
-- in mode "--unfold", when reading VASP OUTCAR files produced with IBRION<0, added an error message.
 - script "install.sh" now proposes to compile Atomsk if binary does not exist in current directory.
 
 
